[gd_scene format=3 uid="uid://bmkil8moafb8q"]

[ext_resource type="Texture2D" uid="uid://ba67opm8juluv" path="res://Tilesets/Doors.png" id="1_f4wf2"]
[ext_resource type="Script" uid="uid://cunql56gbtrm" path="res://Scripts/door.gd" id="2_b8h4h"]

[sub_resource type="Animation" id="Animation_jmhww"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.25, 0.26666668, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 1, 1, 3, 2, 0]
}

[sub_resource type="Animation" id="Animation_22i05"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.74969244, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 3, 2, 2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aowyh"]
_data = {
&"RESET": SubResource("Animation_jmhww"),
&"open": SubResource("Animation_22i05")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_f4wf2"]
radius = 13.038404

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4wf2"]
size = Vector2(16, 16)

[node name="AnimatedGate" type="Sprite2D" unique_id=2047117113]
texture = ExtResource("1_f4wf2")
vframes = 4
frame = 1
script = ExtResource("2_b8h4h")
metadata/_custom_type_script = "uid://cunql56gbtrm"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1375911533]
libraries/ = SubResource("AnimationLibrary_aowyh")

[node name="OpenArea2D" type="Area2D" parent="." unique_id=1051413205]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenArea2D" unique_id=1691717046]
shape = SubResource("CircleShape2D_f4wf2")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=1593627614]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=380285099]
shape = SubResource("RectangleShape2D_f4wf2")
debug_color = Color(0.79643786, 0.31091034, 0.7325331, 0.41960785)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="OpenArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="OpenArea2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="OpenArea2D" to="." method="_on_area_2d_input_event"]
